<resources>
    <string name="app_name">MessengerApp</string>
    <string name="mainActivityMessage">Now you are logged in!</string>
    <string name="welcomeMainMessage">Welcome to Hobbies</string>
    <string name="welcomeMainMessageSecondary">Find your hobbies partner. Create groups that interest you and organise trips. Meet new people and have fun!</string>
    <string name="register_now_btn">Create Account</string>
    <string name="login_now_btn">Sign in</string>
    <string name="register_password">Password</string>
    <string name="register_name">Name</string>
    <string name="register_email">E - Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="hobbies_main_image">Hobbies Main Image</string>
</resources>
