<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00E60808"
    android:backgroundTint="#00141414"
    tools:context=".RegisterActivity">

    <include layout="@layout/app_bar" android:id="@+id/main_app_bar"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="277dp"
        android:layout_marginBottom="413dp"
        android:contentDescription="@string/hobbies_main_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_app_bar"
        app:srcCompat="@drawable/hobbies_main_image" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/loginNowBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="525dp"
        android:background="@drawable/main_button"
        android:text="@string/register_now_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

</androidx.constraintlayout.widget.ConstraintLayout>